--- a/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -86,18 +86,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binders\AgentMetadataModelBinder.cs" />
-    <Compile Include="ComponentRegistration\AgentInstaller.cs" />
+    <Compile Include="Binders\CommandModelBinder.cs" />
+    <Compile Include="ComponentRegistration\CommandInstaller.cs" />
     <Compile Include="ComponentRegistration\ComponentRegistrationBase.cs" />
     <Compile Include="ComponentRegistration\ContainerInstaller.cs" />
     <Compile Include="ComponentRegistration\ControllerContainerInstaller.cs" />
+    <Compile Include="ComponentRegistration\QueryInstaller.cs" />
     <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\CommandController.cs" />
     <Compile Include="Binders\CommandMetadataModelBinder.cs" />
-    <Compile Include="Binders\CommandTypeNotFoundException.cs" />
     <Compile Include="EuclidComposite.cs" />
     <Compile Include="Binders\IEuclidModelBinder.cs" />
     <Compile Include="ComponentRegistration\ModelBinderIntstaller.cs" />
-    <Compile Include="Models\CommandModel.cs" />
+    <Compile Include="Maps\DefaultComponentMetadataToInputModelMap.cs" />
+    <Compile Include="Maps\CannotCreateInputModelException.cs" />
+    <Compile Include="Models\CommandMetadataModel.cs" />
+    <Compile Include="Models\InputModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Binders\EuclidDefaultBinder.cs" />
     <Compile Include="WindsorControllerFactory.cs" />
@@ -110,6 +114,10 @@
     <ProjectReference Include="..\Euclid.Agent\Euclid.Agent.csproj">
       <Project>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</Project>
       <Name>Euclid.Agent</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
+      <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
+      <Name>Euclid.Common.Storage</Name>
     </ProjectReference>
     <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
@@ -131,9 +139,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Maps\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
