--- a/src/Euclid.Composites.Mvc/packages.config
+++ b/src/Euclid.Composites.Mvc/packages.config
@@ -3,4 +3,5 @@
   <package id="routedebugger" version="2.0.0.7" />
   <package id="Castle.Core" version="2.5.2" />
   <package id="Castle.Windsor" version="2.5.3" />
+  <package id="log4net" version="1.2.10" />
 </packages>
