--- a/Euclid.Framework.Metadata/Euclid.Framework.Metadata.csproj
+++ b/Euclid.Framework.Metadata/Euclid.Framework.Metadata.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CD14F53F-0165-4AC4-91DC-3E65DE607958}</ProjectGuid>
+    <ProjectGuid>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Euclid.Composites.UnitTests</RootNamespace>
-    <AssemblyName>Euclid.Composites.UnitTests</AssemblyName>
+    <RootNamespace>Euclid.Framework.Metadata</RootNamespace>
+    <AssemblyName>Euclid.Framework.Metadata</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,18 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moq">
-      <HintPath>..\..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.mocks">
-      <HintPath>..\..\packages\NUnit.2.5.10.11092\lib\nunit.mocks.dll</HintPath>
-    </Reference>
-    <Reference Include="pnunit.framework">
-      <HintPath>..\..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,43 +40,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgentInfoTests.cs" />
-    <Compile Include="FakeMap.cs" />
-    <Compile Include="MetadataServiceTester.cs" />
-    <Compile Include="MapperRegistryTests.cs" />
+    <Compile Include="AgentMetadataService.cs" />
+    <Compile Include="CommandMetadata.cs" />
+    <Compile Include="EuclidMetadata.cs" />
+    <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnsupportedCommandException.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Euclid.Framework.Metadata\Euclid.Framework.Metadata.csproj">
-      <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
-      <Name>Euclid.Framework.Metadata</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Agent\Euclid.Agent.csproj">
+    <ProjectReference Include="..\src\Euclid.Agent\Euclid.Agent.csproj">
       <Project>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</Project>
       <Name>Euclid.Agent</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Common\Euclid.Common.csproj">
+    <ProjectReference Include="..\src\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Composites.Mvc\Euclid.Composites.Mvc.csproj">
-      <Project>{F0842E3B-1F25-4D42-B25D-758B8FCBDCC3}</Project>
-      <Name>Euclid.Composites.Mvc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Composites\Euclid.Composites.csproj">
-      <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
-      <Name>Euclid.Composites</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\Euclid.Framework\Euclid.Framework.csproj">
+    <ProjectReference Include="..\src\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Euclid.SDK.TestingFakes\Euclid.SDK.TestingFakes.csproj">
-      <Project>{71F8C169-9723-47C4-8FED-1ED86DFC15BC}</Project>
-      <Name>Euclid.SDK.TestingFakes</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
