--- a/src/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/Euclid.Composites/Euclid.Composites.csproj
@@ -87,19 +87,17 @@
     <Compile Include="Agent\FileSystemAgentResolver.cs" />
     <Compile Include="Agent\IAgentResolutionStrategy.cs" />
     <Compile Include="Extensions\AgentResolutionStrategyExtensions.cs" />
-    <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\ControllerContextExtensions.cs" />
     <Compile Include="Extensions\MissingRouteDataException.cs" />
     <Compile Include="InputModel\IInputModel.cs" />
     <Compile Include="IViewModel.cs" />
-    <Compile Include="Metadata\AgentInfo.cs" />
-    <Compile Include="Metadata\Metadata.cs" />
-    <Compile Include="Metadata\CommandMetadata.cs" />
-    <Compile Include="Metadata\PropertyMetadata.cs" />
-    <Compile Include="Metadata\UnsupportedCommandException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Euclid.Framework.Metadata\Euclid.Framework.Metadata.csproj">
+      <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
+      <Name>Euclid.Framework.Metadata</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Agent\Euclid.Agent.csproj">
       <Project>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</Project>
       <Name>Euclid.Agent</Name>
@@ -113,7 +111,9 @@
       <Name>Euclid.Framework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Metadata\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
