--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -18,4 +18,6 @@
   <repository path="..\tests\Euclid.SDK.TestingFakes\packages.config" />
   <repository path="..\src\Euclid.Framework.Cqrs.NHibernate\packages.config" />
   <repository path="..\apps\AdminComposite\packages.config" />
+  <repository path="..\tests\Euclid.Composite.InputModelMapping\packages.config" />
+  <repository path="..\tests\Euclid.Composite.MvcApplication\packages.config" />
 </repositories>
