--- a/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
+++ b/src/Euclid.Composites.Mvc/Euclid.Composites.Mvc.csproj
@@ -63,6 +63,9 @@
     <CodeAnalysisRuleDirectories>;D:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\packages\AutoMapper.1.1.0.118\lib\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Castle.Core.2.5.2\lib\NET35\Castle.Core.dll</HintPath>
     </Reference>
@@ -90,16 +93,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binders\AgentMetadataModelBinder.cs" />
-    <Compile Include="Binders\CommandModelBinder.cs" />
+    <Compile Include="Binders\CannotSetInputModelPropertyValues.cs" />
     <Compile Include="Binders\IEuclidModelBinder.cs" />
     <Compile Include="Binders\InputModelBinder.cs" />
+    <Compile Include="CommandNotPresentInAgentException.cs" />
     <Compile Include="ComponentRegistration\ComponentRegistrationBase.cs" />
     <Compile Include="ComponentRegistration\ContainerInstaller.cs" />
     <Compile Include="ComponentRegistration\ControllerContainerInstaller.cs" />
     <Compile Include="ComponentRegistration\ModelBinderIntstaller.cs" />
     <Compile Include="EuclidMvcComposite.cs" />
     <Compile Include="Extensions\ControllerContextExtensions.cs" />
-    <Compile Include="Extensions\MissingRouteDataException.cs" />
+    <Compile Include="Extensions\RequiredRouteDataMissingException.cs" />
+    <Compile Include="Models\InputModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Binders\EuclidDefaultBinder.cs" />
     <Compile Include="WindsorControllerFactory.cs" />
