--- a/src/Euclid.Composites.Mvc/packages.config
+++ b/src/Euclid.Composites.Mvc/packages.config
@@ -4,4 +4,5 @@
   <package id="Castle.Core" version="2.5.2" />
   <package id="Castle.Windsor" version="2.5.3" />
   <package id="log4net" version="1.2.10" />
+  <package id="AutoMapper" version="1.1.0.118" />
 </packages>
