--- a/tests/Euclid.Composite.MvcApplication/packages.config
+++ b/tests/Euclid.Composite.MvcApplication/packages.config
@@ -10,4 +10,5 @@
   <package id="Castle.Windsor" version="2.5.3" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="NHibernate" version="3.2.0.4000" />
+  <package id="AutoMapper" version="1.1.0.118" />
 </packages>
