fixed up euclid mvc configuration

--- a/src/Euclid.Common.Configuration/Euclid.Common.Configuration.csproj
+++ b/src/Euclid.Common.Configuration/Euclid.Common.Configuration.csproj
@@ -69,9 +69,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InvalidTypeSettingException.cs" />
     <Compile Include="OverridableSetting.cs" />
     <Compile Include="OverridableSettingList.cs" />
     <Compile Include="OverridableSettings.cs" />
+    <Compile Include="OverridableTypeSetting.cs" />
     <Compile Include="OverrideSettingsFromAppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
