--- a/src/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/Euclid.Composites/Euclid.Composites.csproj
@@ -88,6 +88,7 @@
     <Compile Include="AgentResolution\FileSystemAgentResolver.cs" />
     <Compile Include="AgentResolution\IAgentResolver.cs" />
     <Compile Include="CompositeApplicationState.cs" />
+    <Compile Include="InMemoryCommandPublicationRecordMapper.cs" />
     <Compile Include="Conversion\AttemptingToRegisterInvalidCommandException.cs" />
     <Compile Include="Conversion\AttemptingToRegisterInvalidInputModelTypeException.cs" />
     <Compile Include="Conversion\CannotCreateCommandException.cs" />
@@ -109,9 +110,17 @@
       <Project>{4C4F2541-140C-47D6-B018-D2024F8CF4F0}</Project>
       <Name>Euclid.Agent</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
+      <Project>{9E2D08E0-0A3D-46D1-BCD6-D85ADE871118}</Project>
+      <Name>Euclid.Common.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Euclid.Common\Euclid.Common.csproj">
       <Project>{F3A0C178-15D9-4E18-B673-28B80F40E665}</Project>
       <Name>Euclid.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Euclid.Framework.Cqrs\Euclid.Framework.Cqrs.csproj">
+      <Project>{58D2349E-9C39-485E-861E-E337ACF186B6}</Project>
+      <Name>Euclid.Framework.Cqrs</Name>
     </ProjectReference>
     <ProjectReference Include="..\Euclid.Framework.Metadata\Euclid.Framework.Metadata.csproj">
       <Project>{272059FF-3EF6-49A1-9DA5-D8649A17AA0C}</Project>
