initial sketch of console fabric; minor renaming in mvc composite

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -20,4 +20,5 @@
   <repository path="..\apps\AdminComposite\packages.config" />
   <repository path="..\tests\Euclid.Composite.InputModelMapping\packages.config" />
   <repository path="..\tests\Euclid.Composite.MvcApplication\packages.config" />
+  <repository path="..\src\HostingFabricConsole\packages.config" />
 </repositories>
