starting work on MvcCompositeApp to extract a base class which can be reused by any composite, e.g. a hosting composite

--- a/src/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/Euclid.Composites/Euclid.Composites.csproj
@@ -83,6 +83,7 @@
     <Compile Include="AgentResolution\FileSystemAgentResolver.cs" />
     <Compile Include="AgentResolution\IAgentResolver.cs" />
     <Compile Include="CompositeApplicationState.cs" />
+    <Compile Include="DefaultCompositeApp.cs" />
     <Compile Include="InMemoryCommandPublicationRecordMapper.cs" />
     <Compile Include="Conversion\AttemptingToRegisterInvalidCommandException.cs" />
     <Compile Include="Conversion\AttemptingToRegisterInvalidInputModelTypeException.cs" />
