factored a separate composite out of the mvc composite

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -21,4 +21,5 @@
   <repository path="..\tests\Euclid.Composite.InputModelMapping\packages.config" />
   <repository path="..\tests\Euclid.Composite.MvcApplication\packages.config" />
   <repository path="..\src\HostingFabricConsole\packages.config" />
+  <repository path="..\src\Euclid.Composites\packages.config" />
 </repositories>
