--- a/src/AgentConsole/AgentConsole.csproj
+++ b/src/AgentConsole/AgentConsole.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A32FFA94-BEEA-46AD-9A99-F09D6F44D58B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HostingFabricConsole</RootNamespace>
-    <AssemblyName>HostingFabricConsole</AssemblyName>
+    <RootNamespace>AgentConsole</RootNamespace>
+    <AssemblyName>AgentConsole</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
