--- a/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
+++ b/src/Euclid.Common.HostingFabric/Euclid.Common.HostingFabric.csproj
@@ -77,7 +77,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DefaultFabric.cs" />
+    <Compile Include="BasicFabric.cs" />
     <Compile Include="FabricRuntimeSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DefaultRuntimeStatistics.cs" />
