--- a/src/Euclid.Agent/Euclid.Agent.csproj
+++ b/src/Euclid.Agent/Euclid.Agent.csproj
@@ -98,6 +98,9 @@
       <Name>Euclid.Framework</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Queries\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
